migrated to JDK21 and jackson 3